--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@paraboly/react-native-card": "github:Paraboly/react-native-card#expo",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.7",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~45.0.0",
     "expo-av": "~11.2.3",
     "expo-sharing": "~10.2.0",
@@ -20,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
