--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-sound": "^0.11.2",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
