--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^5.2.0",
