--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "expo": "~45.0.0",
-    "expo-av": "~11.2.3",
-    "expo-sharing": "~10.2.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "expo": "^47.0.0",
+    "expo-av": "~13.0.2",
+    "expo-sharing": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-countdown-component": "^2.7.1",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.2.0",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-sound": "^0.11.2",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
