--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-countdown-component": "^2.7.1",
     "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "~2.8.0",
