--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "@paraboly/react-native-card": "github:Paraboly/react-native-card#expo",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/drawer": "^6.5.7",
@@ -21,14 +22,12 @@
     "expo-av": "~13.0.3",
     "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
-    "json-stringify-safe": "^5.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-countdown-component": "^2.7.1",
     "react-native-emoji": "^1.8.0",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-math": "^1.2.0",
     "react-native-paper": "^5.2.0",
@@ -39,9 +38,7 @@
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "expo-file-system": "~15.1.1",
-    "@expo/webpack-config": "^0.17.2"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
