--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-math": "^1.2.0",
     "react-native-paper": "^5.2.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
